moved inline style to style.less

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/postPublication.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/postPublication.jspx
@@ -47,7 +47,7 @@
 			<div id="citation-styles" class="tab-content">
 				<div class="tab-pane ${command.selTab == 0 ? 'active' : ''}" id="selTab0">
 					<!-- manual posting -->
-					<div id="suggestionBox" style="position:absolute; display:none;"><!--  --></div>
+					<div id="suggestionBox"><!--  --></div>
 					<form:form cssClass="form-horizontal" id="postForm" action="/editPublication" method="post">
 						<fieldset>
 							<legend><fmt:message key="post_bibtex.manual.heading"/></legend>
