--- a/bibsonomy-webapp/src/main/webapp/resources/css/style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/style.less
@@ -1820,6 +1820,10 @@ bookmarksContainer .posts {
 	background-color: #e4e4e4;
 }
 
+#suggestionBox {
+	position:absolute;
+	display:none;
+}
 
 #bookmarksheader, #bookmarksfooter, #publicationsheader, #publicationsfooter {
 	float: left;
