--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/edit/batcheditbib.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/edit/batcheditbib.jspx
@@ -32,12 +32,19 @@
 		<c:set var="overwrite" value="${command.overwrite}" />
 	</mtl:exists>
 	
-	<batch:skeleton listView="${command.bibtex}" resourceType="bibtex" listViewStartParamName="bibtex.start" otherPostsUrlPrefix="/bibtex" deleteCheckedPosts="${deleteCheckedPosts}" overwrite="${overwrite}"> 
-    	<jsp:attribute name="shortPostDescription"><bib:shortDescription post="${post}"/></jsp:attribute>
-     	<jsp:attribute name="title">  <bib:title post="${post}"/></jsp:attribute>
-     	<jsp:attribute name="desc">   <bib:desc publication="${post.resource}"/></jsp:attribute>
-     	<jsp:attribute name="documents"> <bib:documents post="${post}" /></jsp:attribute>
-     	<jsp:attribute name="actions"><bib:actions post="${post}" loginUserName="${command.context.loginUser.name}" disableResourceLinks="${false}"/></jsp:attribute>
-   </batch:skeleton>
-    	
+	<batch:skeleton listView="${command.bibtex}" listViewStartParamName="bibtex.start" otherPostsUrlPrefix="/bibtex" deleteCheckedPosts="${deleteCheckedPosts}" overwrite="${overwrite}"> 
+		<jsp:attribute name="shortPostDescription">
+			<bib:shortDescription post="${post}"/>
+		</jsp:attribute>
+		<jsp:attribute name="title">
+			<bib:title post="${post}"/>
+		</jsp:attribute>
+		<jsp:attribute name="desc">
+			<bib:desc publication="${post.resource}"/>
+		</jsp:attribute>
+		<jsp:attribute name="documents">
+			<bib:documents post="${post}" />
+		</jsp:attribute>
+		<jsp:attribute name="actions"><bib:actions post="${post}" loginUserName="${command.context.loginUser.name}" disableResourceLinks="${false}"/></jsp:attribute>
+	</batch:skeleton>
 </jsp:root>
