--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/edit/batchediturl.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/edit/batchediturl.jspx
@@ -4,12 +4,9 @@
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
-	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
-	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/bstags/tags"
-    xmlns:bm="urn:jsptagdir:/WEB-INF/tags/bstags/resources/bookmark"
+	xmlns:bm="urn:jsptagdir:/WEB-INF/tags/bstags/resources/bookmark"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-    xmlns:batch="urn:jsptagdir:/WEB-INF/tags/bstags/actions/edit/batch"
-    xmlns:rc="urn:jsptagdir:/WEB-INF/tags/bstags/resources/common"
+	xmlns:batch="urn:jsptagdir:/WEB-INF/tags/bstags/actions/edit/batch"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -24,12 +21,21 @@
 		<c:set var="overwrite" value="${command.overwrite}" />
 	</mtl:exists>
 
-    <batch:skeleton listView="${command.bookmark}" resourceType="bookmark" listViewStartParamName="bookmark.start" otherPostsUrlPrefix="/bookmark" deleteCheckedPosts="${deleteCheckedPosts}" overwrite="${overwrite}">
-      <jsp:attribute name="shortPostDescription"><bm:shortDescription post="${post}"/></jsp:attribute>
-      <jsp:attribute name="title">  <bm:title post="${post}"/></jsp:attribute>
-      <jsp:attribute name="desc">   <bm:desc post="${post}"/></jsp:attribute>
-      <jsp:attribute name="documents"> <bm:documents post="${post}"/></jsp:attribute>
-      <jsp:attribute name="actions"><bm:actions post="${post}" loginUserName="${command.context.loginUser.name}"/></jsp:attribute>
-    </batch:skeleton>
-
+	<batch:skeleton listView="${command.bookmark}" listViewStartParamName="bookmark.start" otherPostsUrlPrefix="/bookmark" deleteCheckedPosts="${deleteCheckedPosts}" overwrite="${overwrite}">
+		<jsp:attribute name="shortPostDescription">
+			<bm:shortDescription post="${post}"/>
+		</jsp:attribute>
+		<jsp:attribute name="title">
+			<bm:title post="${post}" />
+		</jsp:attribute>
+		<jsp:attribute name="desc">
+			<bm:desc post="${post}"/>
+		</jsp:attribute>
+		<jsp:attribute name="documents">
+			<bm:documents post="${post}"/>
+		</jsp:attribute>
+		<jsp:attribute name="actions">
+			<bm:actions post="${post}" loginUserName="${command.context.loginUser.name}"/>
+		</jsp:attribute>
+	</batch:skeleton>
 </jsp:root>
