History: community post logic added. comments added.

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/HistoryBM.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/HistoryBM.jspx
@@ -59,7 +59,7 @@
 				<rc:history listView="${command.bookmark}"
 						loginUserName="${command.context.loginUser.name}"
 						disableListNavigation="${disableListNavigation}"
-						requPath="${requPath}" isPub="${false}">
+						requPath="${requPath}" isPub="false">
 				</rc:history>
 			</div>
 		</div>
