--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/recommended.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/recommended.jspx
@@ -5,6 +5,7 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
 	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
+	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/bstags/tags"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts">
 	
@@ -26,14 +27,14 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="headerExt">
-			<script src="${resdir}/javascript/recommender_feedback.js" type="text/javascript"><!-- keep me --></script>
+			<script src="${resdir}/javascript/bs/recommender_feedback.js" type="text/javascript"><!-- keep me --></script>
 		</jsp:attribute>
 		
 		<!-- show tags of recommended resources, scaled by the count of appearance in the recommendations -->
 		<jsp:attribute name="sidebar">
 			<ul>
 				<li>
-					<span class="sidebar_h"><fmt:message key="tags.of_recommendations"/></span>
+					<sidebar:sidebarHeader textKey="tags.of_recommendations" />
 					<tags:cloud requPath="tag" cmd="${command.tagcloud}" tagboxMinfreqStyle="none" tagSizeMode="user"/>
 				</li>
 			</ul>
