--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/group.jspx
@@ -58,7 +58,7 @@
 								</fmt:message>
 								<button:linkButton
 									title="${joinGroup}"
-									href="/join_group?group=${fn:escapeXml(command.group.name)}"
+									href="/joinGroup?group=${fn:escapeXml(command.group.name)}"
 									image="${resdir}/image/starblue_unselected.png">
 									<jsp:attribute name="text">
 										<fmt:message key="joinGroup"/>
