--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/grouptag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/grouptag.jspx
@@ -59,7 +59,7 @@
 								<fmt:message var="joinGroup" key="navi.join">
 									<fmt:param>${fn:escapeXml(groupName)}</fmt:param>
 								</fmt:message>
-								<button:linkButton title="${joinGroup}" href="/join_group?group=${fn:escapeXml(groupName)}" image="${resdir}/image/starblue_unselected.png">
+								<button:linkButton title="${joinGroup}" href="/joinGroup?group=${fn:escapeXml(groupName)}" image="${resdir}/image/starblue_unselected.png">
 									<jsp:attribute name="text">
 										<fmt:message key="joinGroup"/>
 									</jsp:attribute>
