--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/join_group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/join_group.jspx
@@ -41,7 +41,7 @@
 		 	| content
 		 	-->
 		<jsp:attribute name="content">
-				<form:form action="/join_group?group=${command.group}" method="POST">
+				<form:form action="/joinGroup?group=${command.group}" method="POST">
 					<errors:global errors="${errors}"/>
 					
 					<div class="fsOuter">
