--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
@@ -85,26 +85,19 @@
 										<c:if test="${hasPendingInvites}">
 											<bsform:fieldset legendKey="settings.group.pendingInvites">
 												<jsp:attribute name="content">
-													<fmt:message var="revuser" key="settings.group.revUser.button"/>
-													<fmt:message var="revuserTitle" key="settings.group.revUser.button.title"/>
-													TODO: Beautify this!<br />
-													<dl class="dl-horizontal dt-thumbnail-items group-list">
-													<c:forEach items="${group.memberships}" var="member">
-														<c:if test="${member.groupRole eq 'INVITED'}">
-															<dt>
-																<user:thumbnail user="${member.user}" />
-															</dt>
-															<dd>
-																<div class="row">
-																	<div class="col-md-4"><user:username user="${member.user}" /></div>
-																	<div class="col-md-8">
-																		<a href="/updateGroup?operation=remove_invited&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${revuserTitle}" class="btn btn-danger">${revuser}</a>
-																	</div>
-																</div>
-															</dd>
-														</c:if>
-													</c:forEach>
-													</dl>
+													<fmt:message var="revuser" key="settings.group.remInvite.button"/>
+													<fmt:message var="revuserTitle" key="settings.group.remInvite.button.title"/>
+													<table class="table table-striped table-condensed">
+														<c:forEach items="${group.memberships}" var="member">
+															<c:if test="${member.groupRole eq 'INVITED'}">
+																<tr>
+																	<td class="col-md-1"><user:thumbnail user="${member.user}" size="16" noname="${true}" /></td>
+																	<td class="col-md-3"><user:username user="${member.user}" /></td>
+																	<td class="col-md-8" style="text-align: right"><a href="/updateGroup?operation=remove_invited&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${revuserTitle}" class="btn btn-danger btn-sm">${revuser}</a></td>
+																</tr>
+															</c:if>
+														</c:forEach>
+													</table>
 												</jsp:attribute>
 											</bsform:fieldset>
 										</c:if>
@@ -118,19 +111,22 @@
 											<bsform:fieldset legendKey="settings.group.joinRequests">
 												<jsp:attribute name="content">
 													<!-- TODO: when there are no members, show a coresponding message-->
-													<fmt:message var="decuser" key="settings.group.decUser.button"/>
-													<fmt:message var="decuserTitle" key="settings.group.decUser.button.title"/>
+													<fmt:message var="decuser" key="settings.group.deny.button"/>
+													<fmt:message var="decuserTitle" key="settings.group.deny.button.title"/>
 													<fmt:message var="accuser" key="settings.group.accUser.button"/>
 													<fmt:message var="accuserTitle" key="settings.group.accUser.button.title"/>
 
-													<c:forEach items="${group.memberships}" var="member" varStatus="status">
-														<c:if test="${member.groupRole eq 'REQUESTED'}">
-															<div style="float: left; width: 130px; padding-bottom: 10px;">
-																<user:thumbnail user="${member.user}" /><br />
-																<a class="btn btn-success" href="/updateGroup?operation=accept_join_request&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${accuserTitle}">${accuser}</a> <a class="btn btn-danger" href="/updateGroup?operation=decline_join_request&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${decuserTitle}">${decuser}</a>
-															</div>
-														</c:if>
-													</c:forEach>
+													<table class="table table-striped table-condensed">
+														<c:forEach items="${group.memberships}" var="member">
+															<c:if test="${member.groupRole eq 'REQUESTED'}">
+																<tr>
+																	<td class="col-md-1"><user:thumbnail user="${member.user}" size="16" noname="${true}" /></td>
+																	<td class="col-md-3"><user:username user="${member.user}" /></td>
+																	<td class="col-md-8" style="text-align: right"><a class="btn btn-success" href="/updateGroup?operation=accept_join_request&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${accuserTitle}">${accuser}</a> <a class="btn btn-danger" href="/updateGroup?operation=decline_join_request&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${decuserTitle}">${decuser}</a></td>
+																</tr>
+															</c:if>
+														</c:forEach>
+													</table>
 												</jsp:attribute>
 											</bsform:fieldset>
 										</c:if>
@@ -150,44 +146,39 @@
 													<fmt:message var="deluserTitle" key="settings.group.delUser.button.title"/>
 
 													<!-- show group member list -->
-													<dl class="dl-horizontal dt-thumbnail-items group-list">
-														<c:forEach items="${group.memberships}" var="member" varStatus="status">
+													TODO: Adapt this to maybe forms? The page will be reloaded, no matter what.<BR />
+													<table class="table table-striped table-condensed">
+														<c:forEach items="${group.memberships}" var="member">
 															<c:if test="${member.groupRole ne 'DUMMY' and member.groupRole ne 'REQUESTED' and member.groupRole ne 'INVITED'}">
-																<dt>
-																	<user:thumbnail user="${member.user}" /><br />
-																</dt>
-																<dd>
-																	<div class="row">
-																		<div class="col-md-2">
-																			<i><c:out value="${member.groupRole}" /></i>
-																		</div>
-																		<div class="col-md-10" style="text-align:right">
-																			TODO: Adapt this to maybe forms? The page will be reloaded, no matter what.<BR />
-																			<c:if test="${groupRole eq 'MODERATOR' || groupRole eq 'ADMINISTRATOR'}">
-																				<c:if test="${groupRole eq 'ADMINISTRATOR'}">
-																					<c:choose>
-																						<c:when test="${member.groupRole eq 'USER'}">
-																							<a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=moderator&amp;ckey=${ckey}">&#8593;</a>
-																							| <a class="btn btn-default disabled">&#8595;</a>
-																						</c:when>
-																						<c:when test="${member.groupRole eq 'MODERATOR'}">
-																							<a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=administrator&amp;ckey=${ckey}">&#8593;</a>
-																							| <a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=user&amp;ckey=${ckey}">&#8595;</a>
-																						</c:when>
-																						<c:when test="${member.groupRole eq 'ADMINISTRATOR'}">
-																							<a class="btn btn-default disabled">&#8593;</a>
-																							| <a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=moderator&amp;ckey=${ckey}">&#8595;</a>
-																						</c:when>
-																					</c:choose>
-																				</c:if>
-																				| <a class="btn btn-danger" href="/updateGroup?operation=remove_user&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${deluserTitle}">${deluser}</a>
+																<tr>
+																	<td class="col-md-1"><user:thumbnail user="${member.user}" size="16" noname="${true}" /></td>
+																	<td class="col-md-3"><user:username user="${member.user}" /></td>
+																	<td class="col-md-2"><i><c:out value="${member.groupRole}" /></i></td>
+																	<td class="col-md6" style="text-align:right">
+																		<c:if test="${groupRole eq 'MODERATOR' || groupRole eq 'ADMINISTRATOR'}">
+																			<c:if test="${groupRole eq 'ADMINISTRATOR'}">
+																				<c:choose>
+																					<c:when test="${member.groupRole eq 'USER'}">
+																						<a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=moderator&amp;ckey=${ckey}">&#8593;</a>
+																						| <a class="btn btn-default disabled">&#8595;</a>
+																					</c:when>
+																					<c:when test="${member.groupRole eq 'MODERATOR'}">
+																						<a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=administrator&amp;ckey=${ckey}">&#8593;</a>
+																						| <a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=user&amp;ckey=${ckey}">&#8595;</a>
+																					</c:when>
+																					<c:when test="${member.groupRole eq 'ADMINISTRATOR'}">
+																						<a class="btn btn-default disabled">&#8593;</a>
+																						| <a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=moderator&amp;ckey=${ckey}">&#8595;</a>
+																					</c:when>
+																				</c:choose>
 																			</c:if>
-																		</div>
-																	</div>
-																</dd>	
+																			| <a class="btn btn-danger" href="/updateGroup?operation=remove_user&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${deluserTitle}">${deluser}</a>
+																		</c:if>
+																	</td>
+															</tr>
 															</c:if>
 														</c:forEach>
-													</dl>
+													</table>
 												</c:when>
 												<c:otherwise>
 													TODO: This group has no members must be i18nized.
