fixing error messages when an openid user requests a password reminder
fixes #2320

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/user/passwordReminder.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/user/passwordReminder.jspx
@@ -47,7 +47,7 @@
 								
 								<c:if test="${not empty openIdAcknowledgeError}">
 									<fmt:message key="passwordreminder.acknowledge" var="acknowledge" />
-									<bsform:checkbox path="acknowledgeOpenIDDeletion"  labelText="${acknowledge}" noHelp="${false}"/>
+									<bsform:checkbox path="acknowledgeOpenIDDeletion" inputColSpan="9" labelText="${acknowledge}" noHelp="${false}"/>
 								</c:if>
 								
 								<!-- CAPTCHA -->
